[package]
name = "rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["headers"] }
async-graphql-axum = "4.0.5"
async-graphql = "4.0.6"
tokio = { version = "1.20.4", features = ["macros", "rt-multi-thread"] }
raiden = { git = "https://github.com/raiden-rs/raiden-dynamo" }
xid = "1.0.2"
